platform/apps/observability/manifests/31-ingress-alertmanager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: alertmanager.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-alertmanager
                port:
                  number: 9093
